--- a/galaga.html
+++ b/galaga.html
@@ -3,15 +3,14 @@
 <head>
 <title>Page Title</title>
 <div style="width:640px;height:480px;max-width:100%">
-        <div id="game"></div>
-      </div>
+  <div id="game"></div>
+</div>
 <script type="text/javascript">
     EJS_player = '#game';
+    EJS_biosUrl = ''; // Url to Famicom Disk System bios
     EJS_gameUrl = 'galaga.nes'; // Url to Game rom
-    EJS_core = 'snes';
-    EJS_mouse = false; // SNES Mouse
-    EJS_multitap = false; // SNES Multitap
+    EJS_core = 'nes'; // Optional core: mesen, nestopia
+    EJS_lightgun = false; // Lightgun
 </script>
 <script src="https://www.emulatorjs.com/loader.js"></script>
-</body>
 </html>
