--- a/supermario.html
+++ b/supermario.html
@@ -7,10 +7,9 @@
       </div>
 <script type="text/javascript">
     EJS_player = '#game';
-    EJS_gameUrl = 'supermario.smc'; // Url to Game rom
-    EJS_core = 'snes';
-    EJS_mouse = false; // SNES Mouse
-    EJS_multitap = false; // SNES Multitap
+    EJS_biosUrl = '';
+    EJS_gameUrl = 'pac.gb'; // Url to Game rom
+    EJS_core = 'gba'; // Optional core: vbam, vbanext
 </script>
 <script src="https://www.emulatorjs.com/loader.js"></script>
 </body>
